--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Plus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="principal container">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="imagens/Combo.png" alt="Alura + alura lingua combo +">
+        <div class="container__caixa">
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img class="container__imagem" src="imagens/Combo.png" alt="Alura + alura lingua combo +">
+            <a class="container__botao" href="https://www.alura.com.br/">Lorem ipsum dolor sit amet consectetur</a>
+            <a class="container__botao botao__secundario" href="https://www.alura.com.br/">Lorem ipsum dolor consectetur</a>
+            <p class="container__aviso">Lorem, ipsum dolor sit amet consectetur</p>
+        </div>
+    </section>
+
+    
+
+    <section class="container secundario">
+        <img class="secundario__imagem" src="imagens/Plataformas.png" alt="Um monitor e um celular com alura plus aberto">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
     </section>
     
 </body>
