--- a/index.html
+++ b/index.html
@@ -30,6 +30,43 @@
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a class="container__botao secundario__botao" href="https://www.alura.com.br/">Assine o Combo+</a>
+        </div>
+        <img class="secundario__imagem" src="imagens/Telas.png" alt="Tela do alura plus e alura lingua">
+    </section>
+
+    <section class="container secundario">
+        <img class="secundario__imagem" src="imagens/Notebook.png" alt="Notebook com tela de curso da Alura">
+
+        <div class="container__descricao" >
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
+
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="imagens/tv.png" alt="icone tv">
+                <h3 class="lista__item">TV</h3>
+            </li>
+
+            <li>
+                <img src="imagens/computador.png" alt="icone computador">
+                <h3 class="lista__item">Computador</h3>
+            </li>
+
+            <li>
+                <img src="imagens/celular.png" alt="icone celular">
+                <h3 class="lista__item">Celulares e tablets</h3>
+            </li>
+        </ul>
+    </section>
     
 </body>
 </html>
